# croncheck

./: .dockerignore  .gitignore  .ocamlformat  Dockerfile  Makefile  README.md  croncheck.opam  dune-project
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: commands.md  iana-timezone-plan.md  index.md  input-formats.md  install.md  output-and-exit-codes.md  policies.md  timezones.md
docs/design/: analysis-pipeline.md  cron-expression-semantics.md  iana-timezone-plan.md  index.md  input-loading.md  load-analysis.md  output-contracts.md  policy-engine.md  release-and-container.md  schedule-evaluation.md
docs/examples/: fleet-analysis.md  index.md  kubernetes.md  policy-and-ci.md  reliability.md  review-and-release.md
lib/: analysis.ml  analysis.mli  check.ml  check.mli  cron.ml  cron.mli  crontab.ml  crontab.mli  dune  explain.ml  explain.mli  job.ml  job.mli  kubernetes.ml  kubernetes.mli  load.ml  load.mli  output.ml  output.mli  policy.ml  policy.mli  schedule.ml  schedule.mli  timezone.ml  timezone.mli  util.ml  util.mli  version.ml  version.mli
test/: dune  test_analysis.ml  test_check.ml  test_cli.ml  test_cron.ml  test_explain.ml  test_input.ml  test_job.ml  test_load.ml  test_output.ml  test_policy.ml  test_schedule.ml
test/integration/: dune  e2e.sh  e2e.t
